# matrix_multiplication

./: .gitignore  .gitmodules  CMakeLists.txt  Plot.ipynb  PlotChrono.ipynb  README.txt  result.csv
apps/: CM_hello.cpp  CMakeLists.txt  CPU_hello.cpp  OCL_hello.cpp  OpenCLSimple.cpp  hello.cpp
cm_kernels/: multiplication.cpp  vector_add_genx.cpp  vector_operations.cpp
core/: CM_diag.cpp  CM_diag.hpp  CMakeLists.txt  CPUMatrix.cpp  CPUMatrix.h  CPU_diag.cpp  CPU_diag.hpp  HandMadeCPUMatrix.cpp  HandMadeCPUMatrix.h  HandMadeOpenCLMatrix.cpp  HandMadeOpenCLMatrix.h  OCL_diag.cpp  OCL_diag.hpp  SimpleMatrix.cpp  SimpleMatrix.h  basic_diag.hpp  common.hpp
matrix/: CMakeLists.txt  simple1x4.txt
tests/: CMakeLists.txt  correctness_test.cpp  speed_test.cpp  test_Matrix.cpp  test_sum.cpp
